--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
 <head>
 	<title>Coba git</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<style type="text/css">
+		body{
+			background: gray;
+		}
+	</style>
 </head>
 <body>
 	<h1>Hello World</h1>
+	<script type="text/javascript" src="script.js"/>
+
 </body>
 </html>
